Improved filenames, optimized, and fixed AI getting a log.

--- a/code.net/codenet.kv
+++ b/code.net/codenet.kv
@@ -1,6 +1,6 @@
 #:include gui\welcome.kv
-#:include gui\player.kv
-#:include gui\reveal.kv
+#:include gui\playeramount.kv
+#:include gui\revealdirections.kv
 #:include gui\revpop.kv
 #:include gui\logpop.kv
 #:import C kivy.utils.get_color_from_hex
