--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -1,30 +1,33 @@
 <WelcomeWindow>:
+    #md_bg_color: app.theme_cls.opposite_bg_darkest
+
     name: "welcome"
 
-    BoxLayout:
+    MDBoxLayout:
         orientation: "vertical"
-        BoxLayout:
+        MDBoxLayout:
             orientation: "vertical"
             padding: 30
 
-            Label:
-                bold: True
+            MDLabel:
+                font_style: "H1"
+                halign: "center"
                 underline: True
-                font_size: 70
-                text: "Code.Net"
-                pos_hint: {"Center_x":0.5, "center_y":0.5}
+                text: "[color=#03A062]C0de.Net[/color]"
+                markup: True
 
-            Label:
+            MDLabel:
+              #  font_style: 'Subtitle1'
                 text: "Welcome to a social card game that requires an App to play. The App is still in its Alpha phase therefore, you may experience lack of content, incomplete features, and bugs."
                 pos_hint: {"center_x":0.5, "top":1}
                 text_size: self.size
                 halign: "center"
-            BoxLayout:
+            MDBoxLayout:
 
-        BoxLayout:
+        MDBoxLayout:
             orientation: "vertical"
 
-            Label:
+            MDLabel:
                 text_size: self.size
                 halign: "center"
                 text: "Created by Plague Products. All rights reserved."
@@ -36,4 +39,4 @@
                 pos_hint: {"center_x":0.5, "bottom":1}
                 on_release:
                     app.root.current = "player"
-                    root.manager.transition.direction = "left"
+                    app.root.transition.direction = "left"
