--- a/gui/load.kv
+++ b/gui/load.kv
@@ -6,10 +6,24 @@
             size_hint: None, None
             size: 1644, 3840
             source: "images/defaultback.png"
+
     MDBoxLayout:
+        orientation: "vertical"
         pos_hint: {"center_x":0.5, "center_y":0.5}
-        size_hint: 0.6, 0.3
+        size_hint: 0.7, 0.4
+
+        MDLabel:
+            id: bob
+            text: "test"
+
         Image:
             size: self.texture_size
             source: "images/logo.png"
 
+        MDProgressBar:
+            id: loadbar
+            type: "determinate"
+            running_duration: 2.3
+            size: self.size
+            color: app.theme_cls.primary_color
+            value: 0
