--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -1,64 +1,106 @@
 <PlayerWindow>:
     name: "player"
 
-    GridLayout:
-        cols: 1
+    AnchorLayout
+        Image:
+            size_hint: None, None
+            size: 1644, 3840
+            source: "images/defaultback.png"
 
-        Label:
-            text: "How many players are playing?"
+    BoxLayout:
+        adaptive_width: True
+        orientation: "vertical"
 
+        MDLabel:
+            text_color: app.theme_cls.primary_color
+            theme_text_color: "Custom"
+            font_style: 'Subtitle1'
+            halign: "center"
+            text: "How many [color=#FFFFFF]players[/color] are playing?"
+            markup: True
 
         GridLayout:
+            cols: 3
+            rows: 2
+            padding: 50
             spacing: 5
-            cols:3
-            size_hint: 1, 0.35
 
-            Button:
-                halign: "center"
-                text: "4 Players\n(1 AI)"
+        # use old buttons, because this shit isn't working
+
+            MDRaisedButton:
+                size_hint: None, None
+                id: but1
+                font_style: "Button"
+                md_bg_color: app.theme_cls.primary_dark
+                text: "4 Players"#\n(1 AI)"
                 on_release:
                     root.fourp()
                     app.root.current = "reveal"
                     root.manager.transition.direction = "left"
 
-            Button:
+            MDRaisedButton:
+                size_hint: None, None
+                id: but2
+                font_style: "Button"
+                md_bg_color: app.theme_cls.primary_dark
                 halign: "center"
-                text: "5 Players\n(1 AI)"
+                text: "5 Players"#\n(1 AI)"
                 on_release:
                     root.fivep()
                     app.root.current = "reveal"
                     root.manager.transition.direction = "left"
-            Button:
+
+            MDRaisedButton:
+                size_hint: None, None
+                id: but3
+                font_style: "Button"
+                md_bg_color: app.theme_cls.primary_dark
                 text: "6 Players"
                 on_release:
                     root.sixp()
                     app.root.current = "reveal"
                     root.manager.transition.direction = "left"
-            Button:
+
+            MDRaisedButton:
+                size_hint: None, None
+                id: but4
+                font_style: "Button"
+                md_bg_color: app.theme_cls.primary_dark
                 text: "7 Players"
                 on_release:
                     root.sevenp()
                     app.root.current = "reveal"
                     root.manager.transition.direction = "left"
-            Button
+
+            MDRaisedButton:
+                size_hint: None, None
+                id: but5
+                font_style: "Button"
+                md_bg_color: app.theme_cls.primary_dark
                 text: "8 Players"
                 on_release:
                     root.eightp()
                     app.root.current = "reveal"
                     root.manager.transition.direction = "left"
-            Button
+
+            MDRaisedButton:
+                size_hint: None, None
+                id: but6
+                font_style: "Button"
+                md_bg_color: app.theme_cls.primary_dark
                 text: "9 Players"
                 on_release:
                     root.ninep()
                     app.root.current = "reveal"
                     root.manager.transition.direction = "left"
 
-        BoxLayout:
-            size_hint: 1, 0.3
+        MDBoxLayout:
 
-        Button:
-            text: "Go Back"
-            size_hint: 1, 0.39
-            on_release:
-                app.root.current = "welcome"
-                root.manager.transition.direction = "right"
+            MDFillRoundFlatButton:
+                md_bg_color: app.theme_cls.primary_dark
+                font_style: "Button"
+                text: "Go Back"
+                size_hint: 1, 0.39
+                on_release:
+                    app.root.current = "welcome"
+                    root.manager.transition.direction = "right"
