Added color selection screen GUI only is set.

--- a/codenet.kv
+++ b/codenet.kv
@@ -4,6 +4,7 @@
 #:include gui\revpop.kv
 #:include gui\logpop.kv
 #:include gui\load.kv
+#:include gui\colorselect.kv
 #:import C kivy.utils.get_color_from_hex
 #:import SlideTransition kivy.uix.screenmanager.SlideTransition
 
@@ -12,6 +13,7 @@ WindowManager:
     LoadingScreen:
     WelcomeWindow:
     PlayerWindow:
+    ColorSelectScreen:
     PlayerReveal:
     MainWindow:
 
