Color bottons disable when clicked.

--- a/gui/colorselect.kv
+++ b/gui/colorselect.kv
@@ -35,9 +35,8 @@
                 md_bg_color: C('#b71c1c')
                 text: "Red"
                 on_release:
-                    root.fourp()
-                    app.root.current = "colorselect"
-                    root.manager.transition.direction = "left"
+                    self.disabled = True
+                    #root.test()
 
             MDFillRoundFlatIconButton:
                 md_bg_color: C('#880e4f')
@@ -46,9 +45,7 @@
                 font_style: "Button"
                 text: "Pink"
                 on_release:
-                    root.fivep()
-                    app.root.current = "colorselect"
-                    root.manager.transition.direction = "left"
+                    self.disabled = True
 
             MDFillRoundFlatIconButton:
                 md_bg_color: C('#4a148c')
@@ -57,9 +54,7 @@
                 font_style: "Button"
                 text: "Purple"
                 on_release:
-                    root.sixp()
-                    app.root.current = "colorselect"
-                    root.manager.transition.direction = "left"
+                    self.disabled = True
 
             MDFillRoundFlatIconButton:
                 md_bg_color: C('#0d47a1')
@@ -68,9 +63,7 @@
                 font_style: "Button"
                 text: "Blue"
                 on_release:
-                    root.sevenp()
-                    app.root.current = "colorselect"
-                    root.manager.transition.direction = "left"
+                    self.disabled = True
 
             MDFillRoundFlatIconButton:
                 md_bg_color: C('#1b5e20')
@@ -79,9 +72,7 @@
                 font_style: "Button"
                 text: "Green"
                 on_release:
-                    root.eightp()
-                    app.root.current = "colorselect"
-                    root.manager.transition.direction = "left"
+                    self.disabled = True
 
             MDFillRoundFlatIconButton:
                 md_bg_color: C('#fbc02d')
@@ -90,9 +81,8 @@
                 font_style: "Button"
                 text: "Yellow"
                 on_release:
-                    root.ninep()
-                    app.root.current = "colorselect"
-                    root.manager.transition.direction = "left"
+                    self.disabled = True
+
             MDFillRoundFlatIconButton:
                 md_bg_color: C('#ef6c00')
                 icon: "brush"
@@ -100,9 +90,7 @@
                 font_style: "Button"
                 text: "Orange"
                 on_release:
-                    root.sevenp()
-                    app.root.current = "colorselect"
-                    root.manager.transition.direction = "left"
+                    self.disabled = True
 
             MDFillRoundFlatIconButton:
                 md_bg_color: C('#3e2723')
@@ -111,9 +99,7 @@
                 font_style: "Button"
                 text: "Brown"
                 on_release:
-                    root.eightp()
-                    app.root.current = "colorselect"
-                    root.manager.transition.direction = "left"
+                    self.disabled = True
 
             MDFillRoundFlatIconButton:
                 md_bg_color: C('#212121')
@@ -122,9 +108,7 @@
                 font_style: "Button"
                 text: "Grey"
                 on_release:
-                    root.ninep()
-                    app.root.current = "colorselect"
-                    root.manager.transition.direction = "left"
+                    self.disabled = True
 
         MDBoxLayout:
         MDBoxLayout:
