--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -30,7 +30,7 @@
 
             MDFillRoundFlatIconButton:
                 icon: "robot"
-                id: but1
+                id: butt1
                 font_style: "Button"
                 md_bg_color: app.theme_cls.primary_dark
                 text: "4 Players"
@@ -42,7 +42,7 @@
 
             MDFillRoundFlatIconButton:
                 icon: "robot"
-                id: but2
+                id: butt2
                 font_style: "Button"
                 md_bg_color: app.theme_cls.primary_dark
                 text: "5 Players"
@@ -54,7 +54,7 @@
 
             MDFillRoundFlatIconButton:
                 icon: "account-group"
-                id: but3
+                id: butt3
                 font_style: "Button"
                 md_bg_color: app.theme_cls.primary_dark
                 text: "6 Players"
@@ -66,7 +66,7 @@
 
             MDFillRoundFlatIconButton:
                 icon: "account-group"
-                id: but4
+                id: butt4
                 font_style: "Button"
                 md_bg_color: app.theme_cls.primary_dark
                 text: "7 Players"
@@ -78,7 +78,7 @@
 
             MDFillRoundFlatIconButton:
                 icon: "account-group"
-                id: but5
+                id: butt5
                 font_style: "Button"
                 md_bg_color: app.theme_cls.primary_dark
                 text: "8 Players"
@@ -90,7 +90,7 @@
 
             MDFillRoundFlatIconButton:
                 icon: "account-group"
-                id: but6
+                id: butt6
                 font_style: "Button"
                 md_bg_color: app.theme_cls.primary_dark
                 text: "9 Players"
