--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -67,12 +67,12 @@
                 pos_hint: {"center_x":0.5, "center_y":0.5}
                 on_release:
                     #-------temp to fix shit kivymd----
-                    root.manager.get_screen("player").ids.but1.size_hint = 1, 1
-                    root.manager.get_screen("player").ids.but2.size_hint = 1, 1
-                    root.manager.get_screen("player").ids.but3.size_hint = 1, 1
-                    root.manager.get_screen("player").ids.but4.size_hint = 1, 1
-                    root.manager.get_screen("player").ids.but5.size_hint = 1, 1
-                    root.manager.get_screen("player").ids.but6.size_hint = 1, 1
+                    root.manager.get_screen("player").ids.butt1.size_hint = 1, 1
+                    root.manager.get_screen("player").ids.butt2.size_hint = 1, 1
+                    root.manager.get_screen("player").ids.butt3.size_hint = 1, 1
+                    root.manager.get_screen("player").ids.butt4.size_hint = 1, 1
+                    root.manager.get_screen("player").ids.butt5.size_hint = 1, 1
+                    root.manager.get_screen("player").ids.butt6.size_hint = 1, 1
                     #-------temp to fix shit kivymd----
                     app.root.current = "player"
                     root.manager.transition.direction = "left"
